knitr the project into PDF
Uploaded the knitr pdf version. I did this for fun, as you can see there
is a limit on the margins when you convert to pdf, that doesn't happen
in html. Good to know.

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,7 @@
 title: "Project 1 Reproducible Research"
 author: "Scott Riggs"
 date: "Sunday, May 10, 2015"
-output: html_document
+output: pdf_document
 ---
 
 ## Loading and preprocessing the data
